  - Checked if configuration file is readable in configuration utility
    (#1568355).
  - Special mailboxes marked in special_mailbox hook are no longer listed
    in folder delete, rename and subscription options.
  - Translate plugin: prevent PHP notice when viewing empty message.
  - Add CEST and MEST (non-standard) timezone codes for +0200.
  - Add <label> to From field in message list.

Version 1.4.8 - 11th August 2006
--------------------------------
  - Fixed URL for Read Receipts being incorrect in some cases (#1177518).
  - Fixed endless loop when trying to parse "From: )(" (#1517867).
  - Using is_file() instead of file_exists() in fortune plugin, which
    correctly fails if the specified location is a directory (#1499134).
  - Add manual page for conf.pl under contrib.
  - Don't allow selecting INBOX as Sent, Draft or Trash folder (#1242346).
  - Fixed spamcop web based reporting form (#1519673).
  - Session cookies are turned on, if session.use_cookies is turned off
    in PHP configuration (#1518885).
  - Cleaned whitespace in output buffer when plugins are loaded (#1291209).
  - Removed conf.pl dependency on Perl IO::Socket module. Automatic detection
    of supported authentication mechanisms is disabled, if IO::Socket is not
    available.
  - Make the base for the SquirrelMail URL configurable. Adds a new variable
    config_base_location to config.php and a new option to conf.pl. This is
    to prevent problems in installs where our heuristic doesn't work
    correctly (#1521299, #1460675, #1110064, #1000850, #1113791).
  - Fixed mailbox and header sanitizing in src/search.php.
  - Handle IMAP copy errors in filters plugin. Added $handle_errors option
    and boolean return in sqimap_messages_copy() function (#1520437).
  - Improved register_globals=on handling code in order to prevent possible
    variable corruption. This also effectively rules out future attack vectors
    that require register_globals to be on.